# XMAGL

./: CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindGLM.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
includes/XMA/: Core.hpp  Shapes.hpp
includes/XMA/Core/: Bootstrap.hpp  Camera.hpp  Config.hpp  Controller.hpp  ControllerList.hpp  Debug.hpp  Display.hpp  Engine.hpp  Input.hpp  Math.hpp  Scene.hpp  Shader.hpp  Shape.hpp  ShapeLoader.hpp  Timeout.hpp  Timer.hpp  Transform.hpp  Vertex.hpp  VertexBuffer.hpp
includes/XMA/Shapes/: AxisShape.hpp  CircleShape.hpp  CubeShape.hpp  GridShape.hpp  PlaneShape.hpp  TerrainShape.hpp
sources/XMA/: All.hpp  Assert.hpp  Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Config.hpp  Debug.cpp  Debug.hpp  Display.cpp  Display.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Input.cpp  Input.hpp  Math.cpp  Math.hpp  Shader.cpp  Shader.hpp  Shape.cpp  Shape.hpp  ShapeLoader.hpp  Timeout.cpp  Timeout.hpp  Timer.cpp  Timer.hpp  Transform.cpp  Transform.hpp  Vertex.hpp  VertexBuffer.cpp  VertexBuffer.hpp
sources/XMA/Components/: GridComponent.cpp  GridComponent.hpp  RenderableComponent.cpp  RenderableComponent.hpp
sources/XMA/Core/: @DisplayData.hpp  @EngineData.hpp  @InputData.hpp  @ShaderData.hpp  @VertexBufferData.hpp  Bootstrap.cpp  Camera.cpp  Controller.cpp  Debug.cpp  Display.cpp  Engine.cpp  Input.cpp  Math.cpp  Shader.cpp  Shape.cpp  Timeout.cpp  Timer.cpp  Transform.cpp  VertexBuffer.cpp
sources/XMA/Shaders/: FileShader.hpp  FlatVertexColorShader.hpp  (+1 more)
(+29 files in other folders)
